bug squashes

--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@ ul li a {
 .hero-section {
     display: flex;
     width: 100vw;
-    height: 767px;
+    height: 100vh;
     background-image: url(../images/Image\ \(1\).png);
     background-position: center;
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@ ul li a {
     align-items: center;
     justify-content: center;
     align-items: center;
-    align-self: center;
+    margin-top: 150px;
 }
 
 .hero-title {
@@ -241,7 +241,7 @@ ul li a {
 
 /* this is for tablet screen */
 
-@media(max-width: 768px) , (max-width: 820px) , (max-width: 834px) {
+@media(max-width: 768px) , (max-width: 820px) , (max-width: 834px), (max-width: 800px) {
 
     .ham {
         width: 30px;
@@ -265,7 +265,16 @@ ul li a {
         padding-left: 20px;
     }
 
+    .hero-section {
+        display: flex;
+        width: 100vw;
+        height: 100vh;
+        background-image: url(../images/Image\ \(1\).png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
 
+    }
 
     .hero-text {
     display: flex;
@@ -279,7 +288,8 @@ ul li a {
     align-items: center;
     justify-content: center;
     align-items: center;
-    align-self: center;
+    margin-top: 130px;
+    /* align-self: center; */
 }
 
 .logo {
@@ -411,7 +421,7 @@ ul li a {
     line-height: 20px;
     font-weight: 400;
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     width: 600px;
 
 
@@ -466,7 +476,7 @@ ul li a {
 /* this is for mobile screen */
 
 
-@media(max-width: 425px) , (max-width: 428px) {
+@media(max-width: 425px) , (max-width: 428px)  , (max-width: 414px) {
 
     header {
         padding: 10px;
@@ -507,9 +517,9 @@ ul li a {
 
     .hero-section {
         width: 100vw;
-        height: 767px;
+        height: 100vh;
         background-image: url(../images/Image\ \(1\).png);
-        background-position:  right;
+        background-position:  center;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -525,7 +535,7 @@ ul li a {
         background-color: #ffffff;
         align-items: center;
         justify-content: center;
-        align-self:flex-start ;
+        /* align-self:flex-start ; */
         margin-top: 20px;
     }
     
@@ -711,7 +721,7 @@ ul li a {
 /* this is for mobile screen Lower screen*/
 
 
-@media(max-width: 375px) , (max-width: 320px) {
+@media(max-width: 375px) {
 
     header {
         padding: 10px;
@@ -753,7 +763,7 @@ ul li a {
 
     .hero-section {
         width: 100vw;
-        height: 767px;
+        height: 100vh;
         background-image: url(../images/Image\ \(1\).png);
         background-position: center;
         background-repeat: no-repeat;
@@ -771,7 +781,7 @@ ul li a {
         background-color: #ffffff;
         align-items: center;
         justify-content: center;
-        align-self:flex-start ;
+        /* align-self:flex-start ; */
         margin-top: 20px;
     }
     
@@ -996,9 +1006,9 @@ ul li a {
 
     .hero-section {
         width: 100vw;
-        height: 767px;
+        height: 100vh;
         background-image: url(../images/Image\ \(1\).png);
-        background-position: center;
+        background-position:  center;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -1014,7 +1024,7 @@ ul li a {
         background-color: #ffffff;
         align-items: center;
         justify-content: center;
-        align-self:flex-start ;
+        /* align-self:flex-start ; */
         margin-top: 20px;
     }
     
@@ -1125,7 +1135,7 @@ ul li a {
     }
 
     .feat-ttt {
-        padding: 0 10px;
+        padding: 0 18px;
     }
     
     .feat-head {
